--- a/libs/simple_faq/templates/question_list.html
+++ b/libs/simple_faq/templates/question_list.html
@@ -1,11 +1,21 @@
 {% load i18n %}
 
-<h2 id="topic-{{ topic.id }}" class="topic">{{ topic.text }}</h2>
+
+<legend id="topic-{{ topic.id }}" class="topic">{{ topic.text }}</legend>
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 {% for question in topic.questions.all %}
+ <div class="panel panel-default">
+       
+                
     {% include 'question_detail.html' with question=question %}
+ </div>
 {% empty %}
     <a id="no-question-anchor-{{ topic.id }}" class="no_question_anchor">
         <img id="no-question-image-{{ topic.id }}" class="no_question_image" src="">
     </a>
     <div id="no-question-answer-{{ topic.id }}" class="no_question_answer">{% blocktrans %}No questions available!{% endblocktrans %}</div>
+
+
 {% endfor %}
+
+</div>
