--- a/templates/event/include/include_network_reception.html
+++ b/templates/event/include/include_network_reception.html
@@ -21,7 +21,10 @@
 
 
         </tr>
-        <tr><td colspan= '3'>Spots remaining:{{rt.get_spots}} </td></tr>
+        <!-- tr><td colspan= '3'><strong>Spots remaining</strong><br>
+                          Round table I: {{session1}}<br>
+                           Round table II:{{session2}}<br>
+                            </td></tr-->
         {% endfor %}
     </tbody>
 </table>
