--- a/STATIC_URL/assets/css/app.css
+++ b/STATIC_URL/assets/css/app.css
@@ -71,13 +71,14 @@ h1 i, h2 i, h3 i, h4 i, h5 i, h6 i {
 /*Block Headline*/
 .headline {
   display: block;
-  margin: 10px 0 25px 0;
+  margin: 0px 0 5px 0;
   border-bottom: 1px dotted #e4e9f0;
 }
 
 .headline h2 {
   font-size: 22px;
 }
+legend{margin-bottom:10px}
 
 .headline h2, 
 .headline h3, 
