--- a/templates/photologue/gallery_archive.html
+++ b/templates/photologue/gallery_archive.html
@@ -11,6 +11,19 @@
 
 <link rel="stylesheet" href="{% static "css/jquery.fancybox.css " %}">
 <style>
+
+.modal-content {
+height:50%
+}
+.thumbnail {margin-bottom:6px;}
+
+.carousel-control.left,.carousel-control.right{
+  background-image:none;
+  margin-top:10%;
+  width:5%;
+}
+
+
     .hidden {
     display: none;
 }
@@ -25,8 +38,8 @@
 
 
   <!--=== Content Part ===-->
-{% cache 500 sidebar %}
 
+{% comment %}
 	
 <div class="gallery-page">
     {% if latest %}
@@ -60,14 +73,80 @@
        </div>
 
    </div>
-
+{% endcomment %}
      <!--=== Content Part ===-->
-{% endcache %}	
+
+
+  <legend>Latest Galleries</legend>
+
+{#% cache 86400 sidebar %#}{# {{gallery}} 1 day = 60*60*24 seconds #}
+<div class="row">
+
+     
+{% for gallery in latest %}
+{% with gallery.public|first as image %}
+<div class="col-xs-12 col-md-4 col-sm-6">
+<a  title="{{gallery}}">
+        <img class="thumbnail" id="images-{{gallery.pk}}" src="{{image.image.url}}" width="250" >
+</a>
+
+ <div class="caption">
+        <h5>{{gallery}} </h5>
+
+ </div> 
+
+
+ </div>   
+{% endwith %}
+{% endfor %}    
+ </div>
+
+
+<div class="hidden" id="img-repo">
+  {% for gallery in latest %}	
+{% for photo in gallery.public %}
+   <div class="item" id="images-{{gallery.pk}}">
+          <img class="thumbnail col-md-12" title="{{gallery}}-{{photo}}"  src="{{ photo.image.url}}" alt="" idth="300">
+          
+    </div>
+        {% endfor %}
+ {% endfor %}
+</div>
+{#% endcache %#}
+
+
+<div class="modal" id="modal-gallery" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+          <button class="close" type="button" data-dismiss="modal">×</button>
+          <h3 class="modal-title"></h3>
+      </div>
+      <div class="modal-body">
+          <div id="modal-carousel" class="carousel">
+   
+            <div class="carousel-inner">           
+            </div>
+            
+            <a class="carousel-control left" href="#modal-carousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+            <a class="carousel-control right" href="#modal-carousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+            
+          </div>
+      </div>
+      <div class="modal-footer">
+          <button class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+	
   {% endblock %}
 
 {% block side_bar %} 
 
-<p> <font  "size=2"> Gallery Archieve </font> </p>
+<legend> Gallery Archieve  <legend>
 
 
 
@@ -107,5 +186,40 @@
 
   {% endblock %}
 
+ {% block javascript %}
+    <script>     
+ $(document).ready(function() {
+ 
+ 
+  /* activate the carousel */
+$("#modal-carousel").carousel({interval:false});
 
+/* change modal title when slide changes */
+$("#modal-carousel").on("slid.bs.carousel", function () {
+  $(".modal-title").html($(this).find(".active img").attr("title"));
+})
+
+/* when clicking a thumbnail */
+$(".row .thumbnail").click(function(){
+    var content = $(".carousel-inner");
+    var title = $(".modal-title");
+  
+    content.empty();  
+    title.empty();
+  
+  	var id = this.id;  
+    var repo = $("#img-repo .item");
+    var repoCopy = repo.filter("#" + id).clone();
+    var active = repoCopy.first();
+  
+    active.addClass("active");
+    title.html(active.find("img").attr("title"));
+  	content.append(repoCopy);
+
+    // show the modal
+  	$("#modal-gallery").modal("show");
+});
+ });
+                                       </script> 
+{% endblock %}
  
