--- a/templates/photologue/gallery_archive_month.html
+++ b/templates/photologue/gallery_archive_month.html
@@ -3,11 +3,25 @@
             {% load staticfiles %}
             {% load static %}
             {% load i18n %}
+{% load cache %}
 
 {% block title %}Galleries for {{ month|date:"F Y" }}{% endblock %}
 
 {% block content %}
 <style>
+
+.modal-content {
+height:50%
+}
+.thumbnail {margin-bottom:6px;}
+
+.carousel-control.left,.carousel-control.right{
+  background-image:none;
+  margin-top:10%;
+  width:5%;
+}
+
+
     .hidden {
     display: none;
 }
@@ -19,39 +33,92 @@
 <link rel="stylesheet" href="{% static "css/jquery.fancybox.css " %}">
   <!--=== Content Part ===-->
 
-<h1>Galleries for {{ month|date:"F Y" }}</h1>
-		
-<div class="gallery-page">
-    {% if object_list %}
- <div class="row margin-bottom-20">
-    
+<legend>Galleries for {{ month|date:"F Y" }}</legend>
+
+{% if object_list %}
+{#% cache 86400 sidebar %#}{# 1 day = 60*60*24 seconds #}
+<div class="row">
+   
+     
 {% for gallery in object_list %}
-<div class="col-md-3 col-sm-6">
-
 {% with gallery.public|first as image %}
-<p> {{gallery}} </p>
-<a class="fancybox thumbnail" rel="gallery{{gallery}}" title="{{gallery}}" href="{{image.get_display_url }}">
-        <img src="{{image.get_thumbnail_url }}" alt=""/>
-    </a>
+<div class="col-xs-12 col-md-6 col-sm-6">
+<a  title="{{gallery}}">
+        <img class="thumbnail" id="images-{{gallery.pk}}" src="{{image.image.url}}" alt="" width="250">
+</a>
+ <div class="caption">
+        <h5>{{gallery}} </h5>
+
+ </div> 
+ 
+ 
+ </div>   
 {% endwith %}
+{% endfor %}    
+ </div>
 
-     <div class="hidden">
-   {% for photo in gallery.public %}
-   <a class="fancybox thumbnail" rel="gallery{{gallery}}" title="{{gallery}}-{{photo}}" href="{{ photo.get_display_url }}">
-          <img src="{{ photo.get_thumbnail_url }}" alt=""/></a>
-        {% endfor %}
+
+<div class="hidden" id="img-repo">
+  {% for gallery in object_list %}	
+{% for photo in gallery.public %}
+   <div class="item" id="images-{{gallery.pk}}">
+          <img class="thumbnail col-md-12" title="{{gallery}}-{{photo}}"  src="{{ photo.image.url}}" alt="" idth="300">
+          
     </div>
-     </div>
-
+        {% endfor %}
  {% endfor %}
- {% else %}
+</div>
+{#% endcache %#}
+{% else %}
 
 
     <p>No galleries were found.</p>
-    {% endif %}
-       </div>
+{% endif %}
 
-   </div>
+{% if is_paginated %}
+        <ul class="pagination pagination-centered">
+            {% if page_obj.has_previous %}
+                <li><a href="?page=1"><<</a></li>
+                <li><a href="?page={{ page_obj.previous_page_number }}"><</a></li>
+            {% endif %}
+
+            {% for i in paginator.page_range %}
+                <li {% if page_obj.number == i %} class="active" {% endif %}><a href="?page={{i}}">{{i}}</a></li>
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+                <li><a href="?page={{ page_obj.next_page_number }}">></a></li>
+                <li><a href="?page={{ page_obj.paginator.num_pages }}">>></a></li>
+            {% endif %}
+        </ul>
+    {% endif %}
+
+<div class="modal" id="modal-gallery" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+          <button class="close" type="button" data-dismiss="modal">×</button>
+          <h3 class="modal-title"></h3>
+      </div>
+      <div class="modal-body">
+          <div id="modal-carousel" class="carousel">
+   
+            <div class="carousel-inner">           
+            </div>
+            
+            <a class="carousel-control left" href="#modal-carousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+            <a class="carousel-control right" href="#modal-carousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+            
+          </div>
+      </div>
+      <div class="modal-footer">
+          <button class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
      <!--=== Content Part ===-->
 
@@ -64,4 +131,46 @@
 
 <h2><a href="{% url 'pl-photologue-root' %}" class="btn btn-primary">View all galleries.</a></h2>
 {% endblock %}
+
+
+
+
+
+{% block javascript %}
+    <script>     
+ $(document).ready(function() {
+ 
+ 
+  /* activate the carousel */
+$("#modal-carousel").carousel({interval:false});
+
+/* change modal title when slide changes */
+$("#modal-carousel").on("slid.bs.carousel", function () {
+  $(".modal-title").html($(this).find(".active img").attr("title"));
+})
+
+/* when clicking a thumbnail */
+$(".row .thumbnail").click(function(){
+    var content = $(".carousel-inner");
+    var title = $(".modal-title");
+  
+    content.empty();  
+    title.empty();
+  
+  	var id = this.id;  
+    var repo = $("#img-repo .item");
+    var repoCopy = repo.filter("#" + id).clone();
+    var active = repoCopy.first();
+  
+    active.addClass("active");
+    title.html(active.find("img").attr("title"));
+  	content.append(repoCopy);
+
+    // show the modal
+  	$("#modal-gallery").modal("show");
+});
+ });
+                                       </script> 
+{% endblock %}
+
 
