--- a/templates/photologue/gallery_list.html
+++ b/templates/photologue/gallery_list.html
@@ -1,58 +1,204 @@
 {% extends "photologue/root.html" %}
 {% load url from future %}
+            {% load staticfiles %}
+            {% load static %}
+            {% load i18n %}
+{% load cache %}
 
-{% block title %}All Galleries{% endblock %}
+{% block title %}Galleries for {{ month|date:"F Y" }}{% endblock %}
 
 {% block content %}
+<style>
 
-<h1>All galleries</h1>
-<div class='row'>
+.modal-content {
+height:50%
+}
+.thumbnail {margin-bottom:6px;}
 
-    {% if object_list %}
-    {% for gallery in object_list %}
-    <div class="container photo-gallery">
-        <h2><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></h2>
-        {% for photo in gallery.sample %}
-        <div class="col-xs-2  gallery-photo">
-            <a href="{{ photo.get_absolute_url }}"><img src="{{ photo.get_thumbnail_url }}" class="{% block gallery-photo-class %}{% endblock %}" alt="{{ photo.title }}"/></a>
-        </div>
-        {% endfor %}
+.carousel-control.left,.carousel-control.right{
+  background-image:none;
+  margin-top:10%;
+  width:5%;
+}
+
+
+    .hidden {
+    display: none;
+}
+.fancybox-title {
+    padding: 0 0 10px 0;
+}
+</style>
+
+<link rel="stylesheet" href="{% static "css/jquery.fancybox.css " %}">
+  <!--=== Content Part ===-->
+
+<legend>Galleries for {{ month|date:"F Y" }}</legend>
+
+{% if object_list %}
+{#% cache 86400 sidebar %#}{# 1 day = 60*60*24 seconds #}
+<div class="row">     
+{% for gallery in object_list %}
+{% with gallery.public|first as image %}
+<div class="col-xs-12 col-md-6 col-sm-6">
+<a  title="{{gallery}}">
+        <img class="thumbnail" id="images-{{gallery.pk}}" src="{{image.image.url}}" alt="" width="250">
+</a>
+ <div class="caption">
+        <h5>{{gallery}} </h5>
+
+ </div>  
+ </div>   
+{% endwith %}
+
+{% endfor %}    
+ </div>
+
+
+<div class="hidden" id="img-repo">
+  {% for gallery in object_list %}	
+{% for photo in gallery.public %}
+   <div class="item" id="images-{{gallery.pk}}">
+          <img class="thumbnail col-md-12" title="{{gallery}}-{{photo}}"  src="{{ photo.image.url}}" alt="" idth="300">
+          
     </div>
-    {% endfor %}
-    {% else %}
+        {% endfor %}
+ {% endfor %}
+</div>
+{#% endcache %#}
+{% else %}
+
+
     <p>No galleries were found.</p>
+{% endif %}
+{% if is_paginated %}
+
+        <ul class="pagination pagination-centered">
+            {% if page_obj.has_previous %}
+                <li><a href="?page=1"><<</a></li>
+                <li><a href="?page={{ page_obj.previous_page_number }}"><</a></li>
+            {% endif %}
+
+            {% for i in paginator.page_range %}
+                <li {% if page_obj.number == i %} class="active" {% endif %}><a href="{% url 'pl-gallery-list' page=i %}">{{i}}</a></li>
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+                <li><a href="?page={{ page_obj.next_page_number }}">></a></li>
+                <li><a href="?page={{ page_obj.paginator.num_pages }}">>></a></li>
+            {% endif %}
+        </ul>
     {% endif %}
-</div>
 
-<div class='row'>
 
-    {% if is_paginated %}
-    <p>{{ page_obj.paginator.count }} galleries total.</p>
-    <div id="page_controls">
-        <p>{% if page_obj.has_previous %}
-        <a href="{% url 'pl-gallery-list' page_obj.previous_page_number %}">Previous</a> | {% endif %} page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} {% if page_obj.has_next %}| <a href="{% url 'pl-gallery-list' page_obj.next_page_number %}">Next</a>{% endif %}
-        </p>
+<div class="modal" id="modal-gallery" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+          <button class="close" type="button" data-dismiss="modal">×</button>
+          <h3 class="modal-title"></h3>
+      </div>
+      <div class="modal-body">
+          <div id="modal-carousel" class="carousel">
+   
+            <div class="carousel-inner">           
+            </div>
+            
+            <a class="carousel-control left" href="#modal-carousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+            <a class="carousel-control right" href="#modal-carousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+            
+          </div>
+      </div>
+      <div class="modal-footer">
+          <button class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
     </div>
-    {% endif %}
+  </div>
 </div>
 
-{% regroup object_list by date_added|date:"Y" as points_by_year %}
-<div class="entry-content">
-    {% for year_points in points_by_year %}
-    <table>
-        <caption>
-            <a href="{% url 'pl-gallery-archive-year' year_points.grouper   %}">{{year_points.grouper}} </a>
-        </caption>
-        {% regroup year_points.list by date_added|date:"M" as points_by_month %}
-        {% for month_points in points_by_month %}
-        <tr>
-            <td>
-                <p> <a href="{% url 'pl-gallery-archive-month' year_points.grouper month_points.grouper  %}">{{month_points.grouper}} </a></p>
-               </td>
-        </tr>
-        {% endfor %}
-    </table>
-    {% endfor %}
-</div>
+
+
+     <!--=== Content Part ===-->
+
 
 {% endblock %}
+
+
+{% block side_bar %} 
+
+<legend> Gallery Archieve  <legend>
+
+
+
+
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+
+{% regroup object_list by date_added|date:"Y" as points_by_year %}
+    {% for year_points in points_by_year %}
+
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+      <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{year_points.grouper}}" aria-expanded="true" aria-controls="collapseOne">
+              {{year_points.grouper}}-Galleries
+          </a>
+      </h4>
+    </div>
+    <div id="collapse{{year_points.grouper}}" class="panel-collapse collapse {% if forloop.first %} in {% endif %}" role="tabpanel" aria-labelledby="headingOne">
+        <div class="panel-body">
+             {% regroup year_points.list by date_added|date:"M" as points_by_month %}
+        {% for month_points in points_by_month %}
+          <p> <a href="{% url 'pl-gallery-archive-month' year_points.grouper month_points.grouper  %}">{{month_points.grouper}} Galleries</a></p>
+
+ {% endfor %}
+
+
+</div>
+    </div>
+  </div>
+   {% endfor %}
+ </div>
+{% endblock %}
+
+
+
+
+
+{% block javascript %}
+    <script>     
+ $(document).ready(function() {
+ 
+ 
+  /* activate the carousel */
+$("#modal-carousel").carousel({interval:false});
+
+/* change modal title when slide changes */
+$("#modal-carousel").on("slid.bs.carousel", function () {
+  $(".modal-title").html($(this).find(".active img").attr("title"));
+})
+
+/* when clicking a thumbnail */
+$(".row .thumbnail").click(function(){
+    var content = $(".carousel-inner");
+    var title = $(".modal-title");
+  
+    content.empty();  
+    title.empty();
+  
+  	var id = this.id;  
+    var repo = $("#img-repo .item");
+    var repoCopy = repo.filter("#" + id).clone();
+    var active = repoCopy.first();
+  
+    active.addClass("active");
+    title.html(active.find("img").attr("title"));
+  	content.append(repoCopy);
+
+    // show the modal
+  	$("#modal-gallery").modal("show");
+});
+ });
+                                       </script> 
+{% endblock %}
+
+
