--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -25,10 +25,10 @@
     <div class="reg-block-header">
         <h2>Sign In</h2>
         <ul class="social-icons text-center">
-            <li><a class="rounded-x social_facebook" data-original-title="Facebook" href="{% url 'social:begin' 'facebook' %}?next={% url 'profile-event' %}"></a></li>
-            <li><a class="rounded-x social_yahoo" data-original-title="Yahoo" href="{% url 'social:begin' 'yahoo' %}?next={% url 'profile-event' %}"></a></li>
-            <li><a class="rounded-x social_googleplus" data-original-title="Google Plus" href="{% url 'social:begin' 'google-oauth2' %}?next={% url 'profile-event' %}"></a></li>
-            <li><a class="rounded-x social_linkedin" data-original-title="Linkedin" href="{% url 'social:begin' 'linkedin' %}?next={% url 'profile-event' %}"></a></li>
+            <li><a class="rounded-x social_facebook" data-original-title="Facebook" href="{% url 'social:begin' 'facebook' %}?next={% url 'first-login' %}"></a></li>
+            <li><a class="rounded-x social_yahoo" data-original-title="Yahoo" href="{% url 'social:begin' 'yahoo' %}?next={% url 'first-login' %}"></a></li>
+            <li><a class="rounded-x social_googleplus" data-original-title="Google Plus" href="{% url 'social:begin' 'google-oauth2' %}?next={% url 'first-login' %}"></a></li>
+            <li><a class="rounded-x social_linkedin" data-original-title="Linkedin" href="{% url 'social:begin' 'linkedin' %}?next={% url 'first-login' %}"></a></li>
         </ul>
         <p>Don't have an account? Click here to <a  href="{% url 'registration_register' %}">{% trans "Sign up" %}</a></p>            
     </div>
