--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -18,10 +18,10 @@
     <div class="reg-block-header">
         <h2>Sign Up</h2>
         <ul class="social-icons text-center">
-            <li><a class="rounded-x social_facebook" data-original-title="Facebook" href="{% url 'social:begin' 'facebook' %}?next=/profile"></a></li>
-            <li><a class="rounded-x social_yahoo" data-original-title="Twitter" href="{% url 'social:begin' 'yahoo' %}?next=/profile"></a></li>
-            <li><a class="rounded-x social_googleplus" data-original-title="Google Plus" href="{% url 'social:begin' 'google-oauth2' %}?next=/profile"></a></li>
-            <li><a class="rounded-x social_linkedin" data-original-title="Linkedin" href="{% url 'social:begin' 'linkedin' %}?next=/profile"></a></li>
+            <li><a class="rounded-x social_facebook" data-original-title="Facebook" href="{% url 'social:begin' 'facebook' %}?next={% url 'first-login' %}"></a></li>
+            <li><a class="rounded-x social_yahoo" data-original-title="Twitter" href="{% url 'social:begin' 'yahoo' %}?next={% url 'first-login' %}"></a></li>
+            <li><a class="rounded-x social_googleplus" data-original-title="Google Plus" href="{% url 'social:begin' 'google-oauth2' %}?next={% url 'first-login' %}"></a></li>
+            <li><a class="rounded-x social_linkedin" data-original-title="Linkedin" href="{% url 'social:begin' 'linkedin' %}?next={% url 'first-login' %}"></a></li>
         </ul>
         <p>Already Signed Up? Click <a class="color-green" href="{% url 'auth_login' %}">Sign In</a> to login your account.</p>
     </div>
